fixed buttons on mobile view, and margin on body

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,6 +3,7 @@
     font-size: 3em;
     margin-top: -0.2em;
     margin-bottom: 13vh;
+    margin-left: 2vw;
     font-style: italic;
 }
 
