--- a/src/css/forecast.css
+++ b/src/css/forecast.css
@@ -25,9 +25,13 @@
 	/*display: flex;*/
 }
 
+input {
+	margin: 1vh 0 0 2vw;
+}
+
 h3 {
 	font-size: 3.75em;
-	margin: 1vh 0 0 0;
+	margin: 1vh 0 0 2vw;
 }
 
 .block {
@@ -173,7 +177,7 @@ h3 {
 	display: table;
 }
 
-.arrows {
+.arrow {
 	display: none;
 }
 
@@ -195,6 +199,7 @@ h3 {
 		background-repeat: no-repeat;
 		height: 100vh;
 		width: 100vw;
+		margin: 0;
 	}
 	.app {
 		display: flex;
@@ -202,7 +207,7 @@ h3 {
 	}
 	h3 {
 		font-size: 3.75em;
-		margin: 1vh 0 0 0;
+		margin: 1vh 0 0 2vw;
 	}
 	.cf {
 		width: inherit;
